# ecommerce-image-ai-processor

./: .env.example  .gitignore  MACOS_FIX.md  README.md  RELEASE.md  VERSION  app.spec  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml
.warp/: project-rules.md
hooks/: hook-PyQt6.py  runtime_hook_pyqt6.py
resources/icons/: icon.icns
resources/templates/: api_config.json  default_process_config.json
scripts/: demo_ai_features.py  generate_icons.sh  preview_template_editor.py  release.sh
src/: __init__.py  app.py  main.py
src/core/: __init__.py  batch_processor.py  composite_processor.py  config_manager.py  queue_worker.py  result_validator.py
src/models/: __init__.py  api_config.py  app_settings.py  batch_queue.py  database.py  image_task.py  process_config.py  template_config.py
src/repositories/: __init__.py
src/services/: __init__.py  ai_service.py  database_service.py  image_service.py  template_manager.py  template_renderer.py  version_checker.py
src/services/ai_providers/: __init__.py  base.py  dashscope_provider.py  factory.py  openai_provider.py
src/services/background_removal/: __init__.py  ai_remover.py  base.py  external_api_remover.py
src/ui/: __init__.py  main_window.py  theme_manager.py
src/ui/dialogs/: __init__.py  about_dialog.py  settings_dialog.py  template_editor_window.py  update_dialog.py
src/ui/resources/: styles.qss  styles_dark.qss  styles_light.qss
src/ui/widgets/: __init__.py  ai_config_panel.py  drop_zone.py  image_pair_panel.py  image_preview.py  image_upload_panel.py  multi_image_drop_zone.py  output_config_panel.py  process_config_panel.py  prompt_config_panel.py  queue_progress_panel.py  task_list_widget.py  template_config_panel.py  toast_notification.py  toolbar_queue_progress.py
src/ui/widgets/template_editor/: __init__.py  canvas.py  editor_toolbar.py  layer_items.py  layer_panel.py  (+4 more)
src/utils/: constants.py  error_handler.py  error_messages.py  exceptions.py  file_utils.py  helpers.py  image_utils.py  logger.py  performance.py  retry.py
tests/: conftest.py
tests/integration/: conftest.py  test_ai_service_integration.py  test_config_integration.py  test_image_service_integration.py  test_ui_integration.py
tests/unit/: test_performance.py
tests/unit/core/: __init__.py  test_composite_processor.py
tests/unit/models/: __init__.py  test_batch_queue.py  test_process_config.py  test_template_config.py
tests/unit/services/: __init__.py  test_ai_service.py  test_image_service.py  test_template_manager.py  test_template_renderer.py
tests/unit/ui/: __init__.py  test_ai_config_panel.py  test_drop_zone.py  test_image_pair_panel.py  test_image_preview.py  test_main_window.py  test_prompt_config_panel.py  test_task_list_widget.py
(+13 files in other folders)
